# GDriveCpp

./: .clang-format  .gitignore  CMakeLists.txt  README.md  conanfile.py
cmake/: compilerSetup.cmake
docs/: library_design.drawio
source/lib/: CMakeLists.txt
source/lib/include/: cache.hpp  callbackListener.hpp  constants.hpp  queryLogic.hpp
source/lib/source/: cache.cpp  callbackListener.cpp  clientAuthentication.cpp  file.cpp  queryBuilder.cpp
source/public_include/GDriveCpp/: dllExport.h  gDrive.h  gFile.h  queryBuilder.h
source/utils/: CMakeLists.txt
source/utils/include/: actions.hpp  data.hpp  directory.hpp  logging.hpp
source/utils/source/: actions.cpp  data.cpp  directory.cpp  logging.cpp
testApp/: CMakeLists.txt  main.cpp
testApp/.secrets/: README.md
